# csm-gui

./: .gitignore  app.go  go.mod  hangul_compose.go  hide_other.go  hide_windows.go  main.go  metadata.go  normalize.go  package-lock.json  pty.go  restart_darwin.go  restart_other.go  restart_windows.go  session.go
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: ffi.rs  lib.rs  metadata.rs  session.rs
frontend/: package-lock.json  package.json  package.json.md5
frontend/src/: App.svelte  style.css
frontend/src/lib/: ContextMenu.svelte  PermissionsModal.svelte  PermissionsPanel.svelte  Preview.svelte  PromptModal.svelte  ProviderIcon.svelte  SessionBrowser.svelte  Settings.svelte  TabSidebar.svelte  Terminal.svelte  store.ts  types.ts
legacy-tauri-proto/: package.json  vite.config.js
legacy-wails/: clipboard_image_darwin.go  clipboard_image_darwin.m  clipboard_image_other.go  hangul_compose.go  hide_other.go  hide_windows.go  main.go  metadata.go  pty.go  restart_darwin.go  restart_other.go  restart_windows.go  session.go  shim_other.go  shim_windows.go  wails.json
legacy-wails/.github/workflows/: release.yml
legacy-wails/frontend/: index.html  package-lock.json  package.json  package.json.md5
legacy-wails/frontend/src/: App.svelte  style.css
mac/: Package.swift
mac/Sources/CCsmCore/: csm_core.h  module.modulemap
mac/Sources/csm-mac/: main.swift
scripts/: generate-signing-cert.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  pty.rs
src/routes/: +page.svelte
(+10 files in other folders)
