[package]
name = "csm_core"
version = "0.1.0"
edition = "2021"
description = "Shared business logic for csm: session JSONL parsing, metadata, PTY mgmt, brew/scoop updater."
license = "MIT"

[lib]
# Produce both an rlib (for Rust callers / tests) AND cdylib +
# staticlib (so Swift / C# can load via FFI).
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
