[package]
name = "csm"
version = "0.1.0"
description = "Session manager for Claude Code + Codex"
authors = ["welcomra1n"]
edition = "2021"

[lib]
name = "csm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util"] }
anyhow = "1"
parking_lot = "0.12"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
